<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/profile_tap_color"
    android:paddingTop="@dimen/dp_5"
    android:paddingBottom="@dimen/dp_5"
    android:baselineAligned="false"
    android:orientation="horizontal" >
    <LinearLayout 
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".2"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txt_profile_age" 
            style="@style/txt_base"
            android:text="@string/_age"
            android:textSize="@dimen/sp_14"/>
        <TextView 
            style="@style/txt_base"
            android:textSize="@dimen/sp_10"
            android:text="@string/age"/>
    </LinearLayout>
    <View 
        style="@style/view_vetical"/>
    <LinearLayout 
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".2"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txt_profile_weight" 
            style="@style/txt_base"
            android:text="@string/_weight"
            android:textSize="@dimen/sp_14"/>
        <TextView 
            style="@style/txt_base"
            android:textSize="@dimen/sp_10"
            android:text="@string/weight"/>
    </LinearLayout>
    <View 
        style="@style/view_vetical"/>
    <LinearLayout 
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".2"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txt_profile_height" 
            style="@style/txt_base"
            android:text="@string/_height"
            android:textSize="@dimen/sp_14"/>
        <TextView 
            style="@style/txt_base"
            android:textSize="@dimen/sp_10"
            android:text="@string/height"/>
    </LinearLayout>
    <View 
        style="@style/view_vetical"/>
    <LinearLayout 
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".2"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txt_profile_sex_role" 
            style="@style/txt_base"
            android:text="@string/_sex_role"
            android:textSize="@dimen/sp_14"/>
        <TextView 
            style="@style/txt_base"
            android:textSize="@dimen/sp_10"
            android:text="@string/sex_role"/>
    </LinearLayout>
    <View 
        style="@style/view_vetical"/>
    <LinearLayout 
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".2"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txt_profile_hiv_status" 
            style="@style/txt_base"
            android:text="@string/_hiv_status"
            android:textSize="@dimen/sp_14"/>
        <TextView 
            style="@style/txt_base"
            android:textSize="@dimen/sp_10"
            android:text="@string/hiv_status"/>
    </LinearLayout>

</LinearLayout>
