<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@android:color/transparent"
    android:orientation="vertical" >
    <TextView
            android:paddingLeft="@dimen/dp_5"
            android:paddingRight="@dimen/dp_5"
        style="@style/txt_base"
        android:text="@string/_looking_for"
        android:textColor="#a1addf"
        android:textSize="@dimen/sp_14"/>
    <TextView
            android:paddingLeft="@dimen/dp_5"
            android:paddingRight="@dimen/dp_5"
        android:id="@+id/txt_fragment_about_looking_for"
        style="@style/txt_base"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginBottom="@dimen/dp_5"
        android:text="@string/looking_for_msg"
        android:singleLine="false"/>
    <View 
        style="@style/abt_view"
/>
    <TextView
            android:paddingLeft="@dimen/dp_5"
            android:paddingRight="@dimen/dp_5"
        style="@style/txt_base"
        android:text="@string/_about_me"
        android:textColor="#a1addf"
        android:textSize="@dimen/sp_14"/>
    <TextView
            android:paddingLeft="@dimen/dp_5"
            android:paddingRight="@dimen/dp_5"
        android:id="@+id/txt_fragment_about_about_me" 
        style="@style/txt_base"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginBottom="@dimen/dp_5"
        android:text="@string/common_msg"
        android:singleLine="false"/>
    <View 
        style="@style/abt_view"
/>
    <TextView
            android:paddingLeft="@dimen/dp_5"
            android:paddingRight="@dimen/dp_5"
        style="@style/txt_base"
        android:text="@string/_interest"
        android:textColor="#a1addf"
        android:textSize="@dimen/sp_14"/>
    <TextView
            android:paddingLeft="@dimen/dp_5"
            android:paddingRight="@dimen/dp_5"
        android:id="@+id/txt_fragment_about_interest"
        style="@style/txt_base"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginBottom="@dimen/dp_5"
        android:text="@string/common_msg"
        android:singleLine="false"/>

</LinearLayout>
