<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/bg"
    android:orientation="vertical" >
    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="@dimen/dp_180"
        android:layout_height="@dimen/dp_55"
        android:contentDescription="@null"
        android:src="@drawable/app_tit"/>
	<TextView 
	    style="@style/txt_base"
	    android:text="@string/forgot_msg"
	    android:singleLine="false"
	    android:layout_marginTop="@dimen/dp_15"
	    android:layout_gravity="center_horizontal"
	    android:gravity="center"
	    android:textSize="@dimen/sp_15"
	    />
	<EditText
	    android:id="@+id/edt_forgot_email_address" 
	    style="@style/edit"
	    android:layout_margin="@dimen/dp_25"
	    android:hint="@string/enter_email_address"/>
	<Button 
	    android:layout_width="@dimen/dp_80"
	    android:id="@+id/btn_forgot_send"
	    android:layout_gravity="center_horizontal"
	    style="@style/btn"
	    android:text="@string/send"/>
</LinearLayout>
