<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg" >

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="@dimen/dp_180"
        android:layout_height="@dimen/dp_55"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_100"
        android:contentDescription="@null"
        android:src="@drawable/app_title" />

    <LinearLayout
        android:id="@+id/layout_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_logo"
        android:layout_marginBottom="@dimen/dp_5"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:background="@android:color/white"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                style="@style/img_home"
                android:contentDescription="@null"
                android:padding="@dimen/dp_5"
                android:src="@drawable/user" />

            <EditText
                android:id="@+id/edt_login_cool_name"
                style="@style/edit_txt"
                android:hint="@string/cool_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                style="@style/img_home"
                android:contentDescription="@null"
                android:padding="@dimen/dp_5"
                android:src="@drawable/pass" />

            <EditText
                android:id="@+id/edt_login_password"
                style="@style/edit_txt"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_login_lets_go"
            style="@style/btn"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/lets_go" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_edt"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginRight="@dimen/dp_25"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_login_forgot_password"
            style="@style/txt_base"
            android:layout_width="0dp"
            android:layout_weight=".50"
            android:padding="@dimen/dp_10"
            android:text="@string/forgot_password"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/txt_login_new_user"
            style="@style/txt_base"
            android:layout_width="0dp"
            android:layout_weight=".50"
            android:gravity="right"
            android:padding="@dimen/dp_10"
            android:text="@string/new_user"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <TextView
        style="@style/txt_base"
        android:layout_above="@+id/layout_bottom"
        android:layout_centerHorizontal="true"
        android:text="@string/login_with"
        android:textSize="@dimen/sp_16" />

    <LinearLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/login_bottom_color"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/dp_5" >

        <ImageView
            android:id="@+id/img_login_facebook"
            style="@style/img_home"
            android:contentDescription="@null"
            android:src="@drawable/facebook" />

        <ImageView
            android:id="@+id/img_login_twitter"
            style="@style/img_home"
            android:contentDescription="@null"
            android:src="@drawable/twitter" />

        
    </LinearLayout>

</RelativeLayout>